@@ -1,5 +1,6 @@
 package by.elmax19.app.config;
 
+import by.elmax19.app.controller.UrlPatterns;
 import by.elmax19.app.intercoptor.LoggingDateInterceptor;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
@@ -7,6 +8,7 @@ import org.springframework.web.servlet.config.annotation.InterceptorRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -16,6 +18,6 @@ public class InterceptorConfig implements WebMvcConfigurer {
     @Override
     public void addInterceptors(InterceptorRegistry registry) {
         registry.addInterceptor(interceptor)
-                .addPathPatterns(Arrays.asList("/players", "/player/{playerId}"));
+                .addPathPatterns(List.of(UrlPatterns.PLAYERS, UrlPatterns.SPECIFIC_PLAYER));
     }
 }
